--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejs-selflearn",
   "version": "1.0.0",
   "description": "",
-  "main": "indexNode.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
