--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "start:dev": "nodemon app.js"
+    "start:dev": "nodemon app.js",
+    "test": "mocha --exit",
+    "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "c8": "^7.11.2",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -19,9 +24,11 @@
     "express-validation": "^4.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.2.2",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
   }
