--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node app.js",
     "start:dev": "nodemon app.js",
     "test": "mocha --exit",
-    "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test"
+    "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test",
+    "build": "babel src -d lib",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
