--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-selflearn",
+  "name": "my-brand-project",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,9 +7,7 @@
     "start": "node app.js",
     "start:dev": "nodemon app.js",
     "test": "mocha --exit",
-    "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test",
-    "build": "babel src -d lib",
-    "test": "jest"
+    "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test"
   },
   "author": "",
   "license": "ISC",
