--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
-    "test": "mocha --exit",
+    "test": "mocha --exit ---timeout 10000",
     "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test"
   },
   "author": "",
@@ -28,6 +28,8 @@
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "superagent": "^7.1.3",
+    "supertest": "^6.2.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
   }
