--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,17 @@
 version: 2.1
-orbs:
-  node: circleci/node@4.7.0
-  heroku: circleci/heroku@1.2.6
-
 jobs:
-  build_and_test:
+  test:
     docker:
-      - image: cimg/node:17.2.0
+      - image: cimg/node:16.14.2
     steps:
       - checkout
-      - node/install-packages:
-          pkg-manager: yarn
       - run:
-          command: yarn test
-          name: Run tests
+          name: install packages
+          command: npm install
       - run:
-          command: yarn build
-          name: Build app
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - .
-
-  deploy: # this can be any name you choose
-    docker:
-      - image: cimg/node:17.2.0
-    steps:
-      - attach_workspace:
-          at: ~/project
-      - heroku/deploy-via-git:
-          force: true # force push when pushing to the heroku remote, see: https://devcenter.heroku.com/articles/git
-
+          name: Run Tests
+          command: npm run test
 workflows:
-  test_my_app:
+  orb-free-workflow:
     jobs:
-      - build_and_test
-      - deploy:
-          requires:
-            - build_and_test # only deploy if the build_and_test job has completed
-          filters:
-            branches:
-              only: main # only deploy when on main
+    - test
