--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
-    "test": "mocha --exit ---timeout 40000",
+    "test": "mocha --exit",
     "cover": "c8 --r html -r text --all  -x 'public/**' -x 'coverage/**' --check-coverage npm test"
   },
   "author": "",
