--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "c8": "^7.11.2",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
